Correction sqoop export ft_a_subscriber_summary

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-subscriber-summary.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-subscriber-summary.conf
@@ -8,7 +8,7 @@ flux.type = "EXPORT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -95
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT DATECODE,NETWORK_DOMAIN,NETWORK_TECHNOLOGY,SUBSCRIBER_CATEGORY,CUSTOMER_ID,SUBSCRIBER_TYPE,COMMERCIAL_OFFER,ACCOUNT_STATUS,LOCK_STATUS,ACTIVATION_MONTH,CITYZONE,USAGE_TYPE,TOTAL_COUNT,TOTAL_ACTIVATION,TOTAL_DEACTIVATION,TOTAL_EXPIRATION,TOTAL_PROVISIONNED,TOTAL_MAIN_CREDIT,TOTAL_PROMO_CREDIT,TOTAL_SMS_CREDIT,TOTAL_DATA_CREDIT,SOURCE,REFRESH_DATE,PROFILE_NAME,PROCESS_NAME FROM AGG.SPARK_FT_A_SUBSCRIBER_SUMMARY WHERE DATECODE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT DATECODE,NETWORK_DOMAIN,NETWORK_TECHNOLOGY,SUBSCRIBER_CATEGORY,CUSTOMER_ID,SUBSCRIBER_TYPE,COMMERCIAL_OFFER,ACCOUNT_STATUS,LOCK_STATUS,ACTIVATION_MONTH,CITYZONE,USAGE_TYPE,SUM(TOTAL_COUNT),SUM(TOTAL_ACTIVATION),SUM(TOTAL_DEACTIVATION),SUM(TOTAL_EXPIRATION),SUM(TOTAL_PROVISIONNED),SUM(TOTAL_MAIN_CREDIT),SUM(TOTAL_PROMO_CREDIT),SUM(TOTAL_SMS_CREDIT),SUM(TOTAL_DATA_CREDIT),SOURCE,REFRESH_DATE,PROFILE_NAME,PROCESS_NAME FROM AGG.SPARK_FT_A_SUBSCRIBER_SUMMARY WHERE DATECODE='###SLICE_VALUE###' GROUP BY NETWORK_DOMAIN, NETWORK_TECHNOLOGY, SUBSCRIBER_CATEGORY,CUSTOMER_ID,SUBSCRIBER_TYPE,COMMERCIAL_OFFER,ACCOUNT_STATUS,LOCK_STATUS,ACTIVATION_MONTH, CITYZONE,USAGE_TYPE, SOURCE,REFRESH_DATE,PROFILE_NAME,PROCESS_NAME, DATECODE"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_SUBSCRIBER_SUMMARY"
 flux.sqoop.export-rdms.dest-table = "MON.FT_A_SUBSCRIBER_SUMMARY"
