--- a/PROD/CONF/OM/load-spark-ft-omny-account-snapshot.conf
+++ b/PROD/CONF/OM/load-spark-ft-omny-account-snapshot.conf
@@ -53,5 +53,5 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OMNY_ACCOUNT_SNAPSHOT/compute_and_insert_into_spark_ft_omny_account_snapshot_part1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OMNY_ACCOUNT_SNAPSHOT/compute_and_insert_into_spark_ft_omny_account_snapshot_part2.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OMNY_ACCOUNT_SNAPSHOT/compute_and_insert_into_spark_ft_omny_account_snapshot_part2.hql"
 
