Ajout des nouvelles colonnes de SITE_360 dans le déversement

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-site-360.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-site-360.conf
@@ -8,7 +8,7 @@ flux.type = "EXPORT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -163
+flux.slice-begin-value = -15
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -125,7 +125,16 @@ SELECT
     DATA_PROMO_RATED_AMOUNT AS PROMO_RATED_AMOUNT,
     DATA_ROAM_PROMO_RATED_AMOUNT AS ROAM_PROMO_RATED_AMOUNT,
     INSERT_DATE,
-    CATEGORY_SITE
+    CATEGORY_SITE,
+    REVENU_SUBS_VOIX,
+    REVENU_SUBS_DATA,
+    REVENU_SUBS_SMS,
+    PDM_OCM,
+    PDM_MTN,
+    PDM_CAMTEL,
+    PDM_NEXTTEL,
+    PDM_NATIONAL,
+    PARC_ACTIF_OM
 FROM MON.SPARK_FT_SITE_360
 WHERE EVENT_DATE='###SLICE_VALUE###'
 """
