re schedule some jobs

--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -1200,7 +1200,7 @@ crontasks +=
   crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_OM_SUBSCRIBERS",
-    cron = "30 25-59/30 * * * ?",
+    cron = "30 1/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-om-subscribers.conf",
     taskType = "BATCH"
      taskQueue = "collect"
@@ -1224,7 +1224,7 @@ crontasks +=
   crontasks +=
     {
       instanceId = "LOAD_SPARK_IT_OMNY_CATEGORY_DETAILS",
-      cron = "30 25-59/30 * * * ?",
+      cron = "30 2/30 * * * ?",
       configFile = "/PROD/CONF/OM/load-spark-it-omny-Category-Details.conf",
       taskType = "BATCH"
       taskQueue = "collect"
@@ -1248,7 +1248,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_OMNY_DOMAIN_DETAILS",
-    cron = "30 25-59/30 * * * ?",
+    cron = "30 3/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-Domain-Details.conf",
     taskType = "BATCH"
     taskQueue = "collect"
@@ -1272,7 +1272,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_OMNY_WALLET",
-    cron = "30 25-59/30 * * * ?",
+    cron = "30 4/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-wallet.conf",
     taskType = "BATCH"
     taskQueue = "collect"
@@ -1296,7 +1296,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_OMNY_ChannelUsers",
-    cron = "30 25-59/30 * * * ?",
+    cron = "30 6/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-ChannelUsers.conf",
     taskType = "BATCH"
     taskQueue = "collect"
@@ -1573,7 +1573,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_OMNY_BALANCESUBSCRIBERS",
-    cron = "30 25-59/30 * * * ?",
+    cron = "30 7/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-BalanceSubscribers.conf",
     taskType = "BATCH"
      taskQueue = "collect"
