--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -4439,31 +4439,6 @@ crontasks +=
 
 crontasks +=
   {
-    instanceId = "LOAD_FT_OMNY_GLOBAL_ACTIVITY",
-    cron = "0 53 */1 * * ?",
-    configFile = "/PROD/CONF/OM/load-ft-omny-global-activity.conf",
-    taskType = "BATCH",
-    taskQueue = "compute",
-    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--conf spark.ui.port=50349"}
-      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
-
-
-crontasks +=
-  {
     instanceId = "LOAD_SPARK_FT_SDT_OM",
     cron = "0 53 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-spark-ft-sdt-om.conf",
@@ -5557,7 +5532,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_OMNY_GLOBAL_ACTIVITY",
-    cron = "0 5/25 * * * ?",
+    cron = "0 25 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-ft-omny-global-activity.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -5599,6 +5574,32 @@ crontasks +=
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
       , {"param" : "--conf spark.ui.port=50838"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_MSISDN_IMEI_LOCALISATION",
+    cron = "0 40 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-msisdn-imei-localisation.conf",
+    taskType = "BATCH",
+    taskQueue = "compute",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=50846"}
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
