--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-cbm-da-usage-dally.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-cbm-da-usage-dally.conf
@@ -48,6 +48,7 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.inline.pre-exec-queries += "SET spark.sql.crossJoin.enabled=true"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/prequery_spark_ft_cbm_da_usage_dally.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/compute_and_insert_spark_ft_cbm_da_usage_daily.hql"
