--- a/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
@@ -39,10 +39,10 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
 flux.sqoop.query = "SELECT SRC_TABLE, SRC_NUM, DEST_NUM, STATE_DATE, ENTRY_DATE, SM_STATE, DEST_OPERATOR, SRC_OPERATOR, SRC_MSC_OPERATOR, DEST_MSC_OPERATOR, SRC_EI_TYPE, DEST_EI_TYPE, NOTIF_IND, DELIVERY_SLICEID, CRA_COUNT, INSERT_DATE, BILLS_PLATFORM, SRC_EI, DEST_EI, BILL_DATE, TRANSACTION_DATE FROM AGG.SPARK_FT_QOS_SMSC_SPECIAL_NUMBER WHERE STATE_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_QS_SMSC_SPEC_NUM"
-flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_QOS_SMSC_SPECIAL_NUMBER"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_QS_SMSC_SPEC_NUM"
-flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_QOS_SMSC_SPECIAL_NUMBER"
+flux.sqoop.export-rdms.dest-table = "MON.FT_QOS_SMSC_SPECIAL_NUMBER"
+flux.sqoop.export-hive.staging-table = "SQ_FT_QOS_SMSC_SPECIAL_NUMBER"
+flux.sqoop.export-hive.staging-table-database = "TMP"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 flux.sqoop.extra-params +="-jt local"
 
