--- a/PROD/CONF/FT_CLAWBACKM1/load-spark-ft-clawbackm1.conf
+++ b/PROD/CONF/FT_CLAWBACKM1/load-spark-ft-clawbackm1.conf
@@ -11,7 +11,7 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_SPARK_FT_CRM_OMNY_TRANSACTIONS_USER"
+flux.name = "LOAD_SPARK_FT_CLAWBACKM1"
 
 flux.has-date-processing = true
 
@@ -21,13 +21,13 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query= true
+flux.slice-has-state-query=true
 flux.slice-state-query="""
 select  if(count(*)=7,'OK','NOK')
 
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSFER_DATE from MON.SPARK_FT_CRM_OMNY_TRANSACTIONS_USER where TRANSFER_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_CLAWBACKM1 where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -35,7 +35,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSFER_DATE from MON.SPARK_FT_CRM_OMNY_TRANSACTIONS_USER where TRANSFER_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_CLAWBACKM1 where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
@@ -50,8 +50,6 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_CRM_OMNY_TRANSACTIONS_USER/prequery_spark_ft_crm_omny_transactions_user.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_CLAWBACKM1/prequery_spark_ft_clawbackm1.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_CRM_OMNY_TRANSACTIONS_USER/compute_and_insert_into_spark_ft_crm_omny_transactions_user.hql"
-
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_CRM_OMNY_TRANSACTIONS_USER/drop_partition_spark_ft_crm_omny_transactions_user.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_CLAWBACKM1/compute_and_insert_into_spark_ft_clawbackm1.hql"
