--- a/PROD/CONF/FT_CRM_OMNY_TRANSACTIONS_USER/load-spark-ft-crm-omny-transactions-user.conf
+++ b/PROD/CONF/FT_CRM_OMNY_TRANSACTIONS_USER/load-spark-ft-crm-omny-transactions-user.conf
@@ -54,4 +54,4 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_CRM_OMNY_TRANSACTIONS_USER/prequer
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_CRM_OMNY_TRANSACTIONS_USER/compute_and_insert_into_spark_ft_crm_omny_transactions_user.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_CRM_OMNY_TRANSACTIONS_USER/drop_partition_spark_ft_crm_omny_transactions_user.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/FT/FT_CRM_OMNY_TRANSACTIONS_USER/drop_partition_spark_ft_crm_omny_transactions_user.hql"
