--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -5609,7 +5609,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_CLAWBACKM1",
-    cron = "0 35 * * * ?",
+    cron = "0 35 * 1-3 * ?",
     configFile = "/PROD/CONF/FT_CLAWBACKM1/load-spark-ft-clawbackm1.conf",
     taskType = "BATCH",
     taskQueue = "compute",
