qualif MON.SPARK_FT_POST_DATA_DA_USAGE_DAY

--- a/PROD/CONF/FT_POST_VOICE_SMS_DA_USAGE_DAY/load-spark-ft-post-voice-sms-da-usage-day.conf
+++ b/PROD/CONF/FT_POST_VOICE_SMS_DA_USAGE_DAY/load-spark-ft-post-voice-sms-da-usage-day.conf
@@ -53,6 +53,12 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT_POST_VOICE_SMS_DA_USAGE_DAY/prequery_
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_POST_VOICE_SMS_DA_USAGE_DAY"
 
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
+
+
+
 flux.exec-queries += "/PROD/SCRIPTS/FT_POST_VOICE_SMS_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_voice_sms_da_usage_day_1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT_POST_VOICE_SMS_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_voice_sms_da_usage_day_2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT_POST_VOICE_SMS_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_voice_sms_da_usage_day_3.hql"
