update cron task for refill

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -1356,7 +1356,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_REFILL",
-    cron = "0 40 */1 * * ?",
+    cron = "0 10-40 */1 * * ?",
     configFile = "/PROD/CONF/ZEBRA/FT/load-spark-ft-refill.conf",
     taskType = "BATCH",
     taskQueue = "compute",
