--- a/PROD/CONF/SPOOL/load-spool-cbm-debit-iris.conf
+++ b/PROD/CONF/SPOOL/load-spool-cbm-debit-iris.conf
@@ -11,7 +11,15 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "SPOOL_CMB_DEBIT_IRIS"
+
+flux.spark.setup-var +=  {"key": "cdr_type","value": "ZTE_ADJUSTMENT_CDR"}
+flux.spark.setup-var +=  {"key": "date_offset","value": "7"}
+flux.spark.setup-var +=  {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_ADJUSTMENT"}
+flux.spark.setup-var +=  {"key": "it_partition_column","value": "FILE_DATE"}
+flux.spark.setup-var +=  {"key": "flux_type","value": "PREPAID"}
+flux.spark.setup-var +=  {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
+
+flux.name = "LOAD_SPOOL_CMB_DEBIT_IRIS"
 
 flux.has-date-processing = true
 
@@ -42,7 +50,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
-
-flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/TT_ANALYSE_DECON_REFILL1/prequery_spark_tt_analyse_decon_refill1.hql"
-flux.exec-queries += "/PROD/CONF/SPOOL/load-spool-cbm-debit-iris.conf"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_CBM_DEBIT_IRIS/prequery_spool_cmb_debit_iris.hql"
+flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_CBM_DEBIT_IRIS/compute_and_insert_into_spool_cmb_debit_iris.hql"
 
