--- a/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
+++ b/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
@@ -6,6 +6,7 @@ flux.output-type = "HIVE"
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.enforce.bucketing", "value": "false"}
+flux.spark.setup-conf += {"key": "spark.debug.maxToStringFields", "value": "100"}
 
 flux.name = "LOAD_SPARK_FT_OM_BICEC_TRANSACTION"
 
