--- a/PROD/CONF/BDI/load-spark-it-bdi-crm-b2c.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-crm-b2c.conf
@@ -17,7 +17,7 @@ flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/BDI/CRM/B2C/*"
 flux.hdfs.dest.arch-dir = "/PROD/ARCH/BDI/CRM/B2C/"
 flux.hdfs.dest.has-sub-dir = true
-flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
+flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{6})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
@@ -36,4 +36,4 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=BDI"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name= CDR.tt_bdi_hlr"
+flux.hive.extra-conf += "--hivevar tt_table_name= CDR.tt_bdi_crm_b2c"
