rectification prequery ft_a_bdi et ft_a_bdi_ameliore

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -5633,7 +5633,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_SPOOL_BLOCAGE_OM",
-    cron = "0 59 */1 * * ?",
+    cron = "0 59 */1 2,29 * ?",
     configFile = "/PROD/CONF/SPOOL/load-spark-spool-blocage-om.conf",
     taskType = "BATCH",
      taskQueue = "compute",
