Spool suspensions, spool blocage om; Modification ft_a_bdi et ft_a_bdi_ameliore;modification spool_conformite_kyc

--- a/PROD/CONF/SPOOL/load-spark-spool-suspensions-telco.conf
+++ b/PROD/CONF/SPOOL/load-spark-spool-suspensions-telco.conf
@@ -50,6 +50,8 @@ flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_FORMAT_MSISDN_
 flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 
 flux.inline.exec-queries +="truncate table TMP.tt_zsmart2"
+flux.inline.exec-queries +="truncate table TMP.TT_SUSPENSION_TELCO"
 
 flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_SUSPENSIONS_TELCO/insert_into_tt_zsmart2.hql"
+flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_SUSPENSIONS_TELCO/insert_into_tt_suspensions_telco.hql"
 flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_SUSPENSIONS_TELCO/compute_and_insert_into_spark_spool_suspensions_telco.hql"
