SPOOL_BASE_IDENTIFICATION_COM correction

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -5830,7 +5830,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_SPOOL_BASE_IDENTIFICATION_COM",
-    cron = "0 0 12 * * ?",
+    cron = "0 50 * * * ?",
     configFile = "/PROD/CONF/SPOOL/load-spark-spool-base-identification-com.conf",
     taskType = "BATCH",
     taskQueue = "compute",
