--- a/PROD/CONF/DIM/DT_REF_CBM/load-dt-ref-cbm.conf
+++ b/PROD/CONF/DIM/DT_REF_CBM/load-dt-ref-cbm.conf
@@ -39,7 +39,8 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
-flux.exec-queries += "/PROD/CONF/DIM/DT_REF_CBM/load-dt-ref-cbm.conf"
+flux.inline.exec-queries += "TRUNCATE TABLE INSERT INTO DIM.DT_REF_CBM"
+flux.exec-queries += "/PROD/SCRIPTS/IT/DIM/DT_REF_CBM/insert_into_dt_ref_cbm.hql"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
