--- a/PROD/CONF/MONITORING/compute_spark_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_missing_files.conf
@@ -34,7 +34,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_missing_files.
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries+= "DROP TEMPORARY FUNCTION IF EXISTS GENERATE_SEQUENCE_FROM_INTERVALE"
 flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_INTERVALE as 'cm.orange.bigdata.udf.GenerateSequenceFromIntervale'"
-
+flux.inline.exec-queries += "TRUNCATE TABLE MON.SPARK_MISSING_FILES"
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/computes_spark_missing_in_zte_files.hql"
 
 flux.inline.post-exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS  VALUES('IN_ZTE','NOK','2020-01-25 01:40:55','###SLICE_VALUE###')"
