--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-cbm_handset-monthly.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-cbm_handset-monthly.conf
@@ -1,30 +1,30 @@
 flux.yarn.queue = "compute"
 flux.log-level = "ERROR"
 
-flux.name = "SQ_EXPORT_FT_RATING_GROUP"
+flux.name = "SQ_EXPORT_FT_CBM_HANDSET_MONTHLY"
 
 flux.type = "EXPORT"
 
 flux.has-date-processing = true
 
-flux.slice-value-type = "DAILY"
+flux.slice-value-type = "MONTHLY"
 flux.slice-begin-value = -50
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-date-format = "yyyy-MM-dd"
+flux.slice-date-format = "yyyy-MM"
 flux.rdms.has-pre-queries = true
 
 flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.FT_RATING_GROUP WHERE EVENT_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+(SELECT COUNT(*) NBR FROM MON.FT_CBM_HANDSET_MONTHLY WHERE PERIOD = REGEXP_REPLACE('###SLICE_VALUE###', '-', ''))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.SPARK_FT_RATING_GROUP WHERE EVENT_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM MON.SPARK_FT_CBM_HANDSET_MONTHLY WHERE PERIOD='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -32,13 +32,14 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM MON.SPARK_FT_RATING_GROUP WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT period,msisdn,imei,total_days_count,region,town,quarter,ph_brand ,ph_model,data_2g , data_2_5g,data_2_75g ,data_3g,data_4g,activation_date,lang_id,last_location_month,insert_date  FROM MON.SPARK_FT_CBM_HANDSET_MONTHLY WHERE PERIOD='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_RATING_GROUP"
-flux.sqoop.export-rdms.dest-table = "MON.FT_RATING_GROUP"
-flux.sqoop.export-hive.staging-table = "SQ_FT_RATING_GROUP"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_CBM_HANDSET_MONTHLY"
+flux.sqoop.export-rdms.dest-table = "MON.FT_CBM_HANDSET_MONTHLY"
+flux.sqoop.export-hive.staging-table = "SQ_SPARK_FT_CBM_HANDSET_MONTHLY"
 flux.sqoop.export-hive.staging-table-database = "TMP"
+
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 flux.sqoop.extra-params +="-jt local"
 
-flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+
