--- a/PROD/CONF/ZEBRA/FT/load-spark-ft-refill.conf
+++ b/PROD/CONF/ZEBRA/FT/load-spark-ft-refill.conf
@@ -16,7 +16,7 @@ flux.spark.setup-var +=  {"key": "table_type","value": "FT"}
 flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_REFILL"}
 flux.spark.setup-var +=  {"key": "insert_date_column","value": "INSERT_DATE"}
 flux.spark.setup-var +=  {"key": "database_table_name","value": "MON.SPARK_FT_REFILL"}
-flux.spark.setup-var +=  {"key": "table_partition","value": "REFILL_DATE"}
+flux.spark.setup-var +=  {"key": "table_partition","value": "file_date"}
 
 flux.name = "LOAD_SPARK_FT_REFILL"
 
@@ -34,7 +34,7 @@ select  if(count(*)=7,'OK','NOK')
 
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct refill_date from MON.SPARK_FT_REFILL where refill_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct file_date from MON.SPARK_FT_REFILL where file_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -42,7 +42,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct refill_date from MON.SPARK_FT_REFILL where refill_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct file_date from MON.SPARK_FT_REFILL where file_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
