--- a/PROD/CONF/REF/load-spark-it-ref-sites.conf
+++ b/PROD/CONF/REF/load-spark-it-ref-sites.conf
@@ -26,7 +26,7 @@ flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/REF_SITES/*"
 flux.hdfs.dest.arch-dir = "/PROD/ARCH/REF_SITES"
 flux.hdfs.dest.has-sub-dir = true
-flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{2})"
+flux.hdfs.dest.has-sub-dir-extractor-regex = "(_.*_)"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
