Correction cron spool_data_via_om

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -5829,7 +5829,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_SPOOL_DATA_VIA_OM",
-    cron = "0 0 40 * * ?",
+    cron = "0 40 * * * ?",
     configFile = "/PROD/CONF/SPOOL/load-spark-spool-data-via-om.conf",
     taskType = "BATCH",
     taskQueue = "compute",
