test export hdfs

--- a/PROD/CONF/EXPORT/load-export-test.conf
+++ b/PROD/CONF/EXPORT/load-export-test.conf
@@ -4,6 +4,7 @@ flux.log-level = "ERROR"
 flux.input-type = "HIVE"
 flux.output-type = "HDFS"
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.name = "LOAD_EXPORT_TEST"
 
@@ -21,15 +22,17 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/EXPORT/prequery_export_test.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/prequery_export_test.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/EXPORT/query_export_test.hql"
+flux.exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/query_export_test.hql"
+
+flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('LOAD_EXPORT_TEST', CURRENT_TIMESTAMP, '2020-10-06')"
 
 
 flux.hdfs.output-format = "csv"
 flux.hdfs.output-has-header = "true"
 flux.hdfs.output-separator = "|"
 flux.hdfs.output-mode = "overwrite"
-flux.hdfs.output-path = "/tmp/testexport/test1/"
+flux.hdfs.output-path = "/PROD/EXPORT/TESTEXPORT"
