test hdfs output

--- a/PROD/CONF/EXPORT/load-export-test.conf
+++ b/PROD/CONF/EXPORT/load-export-test.conf
@@ -28,7 +28,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/prequery_export_test.h
 
 flux.exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/query_export_test.hql"
 
-flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('LOAD_EXPORT_TEST', CURRENT_TIMESTAMP, '2020-10-06')"
+flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('LOAD_EXPORT_TEST', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
 
 
 flux.hdfs.output-format = "csv"
