--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-pulse-spider-point.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-pulse-spider-point.conf
@@ -20,7 +20,7 @@ flux.rdms.has-pre-queries = true
 flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
-SELECT (CASE WHEN COUNT(*) = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM MON.FT_PULSE_SPIDER_POINT WHERE EVENT_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+SELECT (CASE WHEN COUNT(*) = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM MON.FT_PULSE_SPIDER_POINT WHERE EVENT_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS')
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(COUNT(*) > 25, 'OK', 'NOK') FROM MON.SPARK_FT_PULSE_SPIDER_POINT WHERE EVENT_DATE='###SLICE_VALUE###'
