Modification regex zsmart to BDI

--- a/PROD/CONF/BDI/load-spark-it-bdi-zsmart-to-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-zsmart-to-bdi.conf
@@ -10,7 +10,7 @@ flux.name = "LOAD_SPARK_IT_BDI_ZSMART"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/BDI/ZSMART/ZsmartToBDI_*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/BDI/ZSMART/*_ZsmartToBDI.csv"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/BDI/ZSMART/"
 
 flux.hdfs.move-to-arch = true
