--- a/PROD/CONF/EXPORT/load-export-test.conf
+++ b/PROD/CONF/EXPORT/load-export-test.conf
@@ -16,8 +16,41 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=false
-flux.slice-has-filter-query = false
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select
+    case when sum(case when status = 'OK' then 1 else 0 end) = 7 then 'OK' else 'NOK' end
+from
+(
+    select
+        first_value(status) over (partition by event_date order by insert_date desc) status
+    from mon.export_history
+    where job_instanceid = 'EXPORT_TEST'
+    and event_date between date_sub(current_date, 7) and date_sub(current_date, 1)
+) T
+"""
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from
+dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+and datecode in
+(
+    select event_date
+    from
+    (
+        select
+            *,
+            row_number() over(partition by event_date order by insert_date desc) rang
+        from mon.export_history
+        where job_instanceid = 'EXPORT_TEST'
+        and event_date between date_sub(current_date, 7) and date_sub(current_date, 1)
+    ) T
+    where status = 'OK' and rang = 1
+)
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
@@ -28,7 +61,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/prequery_export_test.h
 
 flux.exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/query_export_test.hql"
 
-flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('LOAD_EXPORT_TEST', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('LOAD_EXPORT_TEST', 'OK', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
 
 
 flux.hdfs.output-format = "csv"
