--- a/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-site-360.conf
+++ b/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-site-360.conf
@@ -48,6 +48,9 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/SITE_360/prequery_spark_ft_site_360.h
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=false"
 flux.inline.exec-queries += "set hive.auto.convert.join=false"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_TMP_SITE_360"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_NNP_MSISDN_SIMPLE_DESTN"
+flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/SITE_360/compute_and_insert_into_spark_tmp_site_360.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/SITE_360/compute_and_insert_into_spark_ft_site_360.hql"
