--- a/PROD/CONF/EXPORT/OM/CNC/load-export-cnc-ouverture-compte.conf
+++ b/PROD/CONF/EXPORT/OM/CNC/load-export-cnc-ouverture-compte.conf
@@ -6,12 +6,12 @@ flux.output-type = "HDFS"
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_EXPORT_TEST"
+flux.name = "LOAD_EXPORT_CNC_OUVERTURE_COMPTE"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-begin-value = -288
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -19,14 +19,14 @@ flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
 select
-    case when sum(case when status = 'OK' then 1 else 0 end) = 7 then 'OK' else 'NOK' end
+    case when sum(case when status = 'OK' then 1 else 0 end) = 288 then 'OK' else 'NOK' end
 from
 (
     select
         first_value(status) over (partition by event_date order by insert_date desc) status
     from mon.export_history
-    where job_instanceid = 'LOAD_EXPORT_TEST'
-    and event_date between date_sub(current_date, 7) and date_sub(current_date, 1)
+    where job_instanceid = 'LOAD_EXPORT_CNC_OUVERTURE_COMPTE'
+    and event_date between date_sub(current_date, 288) and date_sub(current_date, 1)
 ) T
 """
 flux.slice-has-filter-query = true
@@ -35,7 +35,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from
 dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+where datecode between date_sub(current_date, 288) and date_sub(current_date, 1)
 and datecode in
 (
     select event_date
@@ -45,8 +45,8 @@ and datecode in
             *,
             row_number() over(partition by event_date order by insert_date desc) rang
         from mon.export_history
-        where job_instanceid = 'LOAD_EXPORT_TEST'
-        and event_date between date_sub(current_date, 7) and date_sub(current_date, 1)
+        where job_instanceid = 'LOAD_EXPORT_CNC_OUVERTURE_COMPTE'
+        and event_date between date_sub(current_date, 288) and date_sub(current_date, 1)
     ) T
     where status = 'OK' and rang = 1
 )
@@ -57,15 +57,15 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/prequery_export_test.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/EXPORT/OM/CNC/prequery_export_cnc_ouverture_compte.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/EXPORT/EXPORTTEST/query_export_test.hql"
+flux.exec-queries += "/PROD/SCRIPTS/EXPORT/OM/CNC/query_export_cnc_ouverture_compte.hql"
 
-flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('LOAD_EXPORT_TEST', 'OK', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('LOAD_EXPORT_CNC_OUVERTURE_COMPTE', 'OK', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
 
 
 flux.hdfs.output-format = "csv"
 flux.hdfs.output-has-header = "true"
-flux.hdfs.output-separator = "|"
+flux.hdfs.output-separator = ";"
 flux.hdfs.output-mode = "overwrite"
-flux.hdfs.output-path = "/PROD/EXPORT/TESTEXPORT"
+flux.hdfs.output-path = "/PROD/EXPORT/OM/CNC"
