modif ft_conso_simbox

--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-dola-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-dola-daily.conf
@@ -12,7 +12,7 @@ flux.name = "LOAD_SPARK_FT_CBM_DOLA_DAILY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-begin-value = -147
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -37,19 +37,23 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/prequery_spark_ft_cbm_dola_daily.hql"
 
-flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
-flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
-flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.spark_TT_FT_CBM_DOLA_DAILY"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.spark_TT_FT_CBM_DOLA_DAILY_PRE"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_spark_ft_cbm_dola_daily_part1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_spark_ft_cbm_dola_daily_part2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_spark_ft_cbm_dola_daily_part4.hql"
+
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.spark_TT_FT_CBM_DOLA_DAILY"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.spark_TT_FT_CBM_DOLA_DAILY_PRE"
+
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_CLIENT_LAST_SITE_DAY"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.spark_TT_FT_CBM_DOLA_DAILY_PRE"
+
