Correction script sqoop-export-spark-ft-client-site-traffic-month.conf

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-client-site-traffic-month.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-client-site-traffic-month.conf
@@ -35,7 +35,7 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
 flux.sqoop.query = """
 SELECT
-    EVENT_MONTH,
+    CONCAT_WS('', SUBSTRING(EVENT_MONTH, 1, 4), SUBSTRING(EVENT_MONTH, 6, 2)) EVENT_MONTH,
     MSISDN,
     SITE_NAME,
     DUREE_SORTANT,
