Correction spool 4_export_site_revenu

--- a/PROD/CONF/EXPORT/MARKETING/load-export-4-parc_groupe_site_revenu.conf
+++ b/PROD/CONF/EXPORT/MARKETING/load-export-4-parc_groupe_site_revenu.conf
@@ -13,7 +13,7 @@ flux.name = "LOAD_EXPORT_4_PARC_GROUPE_SITE_REVENU"
 
 flux.has-date-processing = true
 
-flux.slice-value-type = "MONTHLY
+flux.slice-value-type = "MONTHLY"
 flux.slice-begin-value = -4
 flux.slice-end-value = -1
 flux.slice-step-value = 1
