Spool LOAD_EXPORT_8_2_REVENU_DATA_PAR_SITE_DETAIL

--- a/PROD/CONF/EXPORT/MARKETING/load-export-8-2-revenu-data-par-site-detail.conf
+++ b/PROD/CONF/EXPORT/MARKETING/load-export-8-2-revenu-data-par-site-detail.conf
@@ -75,4 +75,4 @@ flux.hdfs.output-has-header = "true"
 flux.hdfs.output-separator = ";"
 flux.hdfs.output-mode = "overwrite"
 
-flux.hdfs.output-path = "/PROD/EXPORT/8_2_REVENU_DATA_PAR_SITE_DETAIL
+flux.hdfs.output-path = "/PROD/EXPORT/8_2_REVENU_DATA_PAR_SITE_DETAIL"
