modification prequery recyclage et sqoop cti premium

--- a/PROD/CONF/SQOOP/sqoop-export-ft-appels-cti-premium-vip.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-appels-cti-premium-vip.conf
@@ -31,7 +31,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM CTI.FT_APPELS_CTI_PREMIUM_VIP WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT *, current_timestamp SQOOP_DATE FROM CTI.FT_APPELS_CTI_PREMIUM_VIP WHERE EVENT_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "CTI.SQ_FT_APPELS_CTI_PREMIUM_VIP"
 flux.sqoop.export-rdms.dest-table = "CTI.FT_APPELS_CTI_PREMIUM_VIP"
