--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-pulse-spider-point.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-pulse-spider-point.conf
@@ -31,7 +31,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM MON.SPARK_FT_PULSE_SPIDER_POINT WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT *, current_timestamp SQOOP_DATE FROM MON.SPARK_FT_PULSE_SPIDER_POINT WHERE EVENT_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_PULSE_SPIDER_POINT"
 flux.sqoop.export-rdms.dest-table = "MON.FT_PULSE_SPIDER_POINT"
