Bascule des spool om vers la nvlle architecture

--- a/PROD/CONF/EXPORT/OM/OMNY/load-om-abonner-om-hebdo.conf
+++ b/PROD/CONF/EXPORT/OM/OMNY/load-om-abonner-om-hebdo.conf
@@ -69,7 +69,7 @@ flux.has-post-queries = true
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/EXPORT/OM/OMNY/OM_ABONNER_OM_HEBDO/prequery_om_abonner_om_hebdo.hql"
 flux.exec-queries += "/PROD/SCRIPTS/EXPORT/OM/OMNY/OM_ABONNER_OM_HEBDO/query_om_abonner_om_hebdo.hql"
-flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('${hivevar:job_instanceid}', 'OK', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('${hivevar:job_instanceid}', 'OK', CURRENT_TIMESTAMP, date_sub('###SLICE_VALUE###',pmod(datediff('###SLICE_VALUE###','1900-01-01'),7)))"
 
 
 flux.hdfs.output-format = "csv"
