Modification crons collect et calcul BDI

--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -1693,7 +1693,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_BDI_CRM_B2C",
-    cron = "30 35-59/30 * * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-it-bdi-crm-b2c.conf",
     taskType = "BATCH"
     taskQueue = "collect"
@@ -1717,7 +1717,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_BDI_CRM_B2B",
-    cron = "30 35-59/30 * * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-it-bdi-crm-b2b.conf",
     taskType = "BATCH"
     taskQueue = "collect"
@@ -1741,7 +1741,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_BDI_HLR",
-    cron = "30 35-59/30 * * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-it-bdi-hlr.conf",
     taskType = "BATCH"
     taskQueue = "collect"
@@ -1765,7 +1765,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_BDI_ZSMART",
-    cron = "30 15-59/30 * * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-it-bdi-zsmart-to-bdi.conf",
     taskType = "BATCH"
     taskQueue = "collect"
