--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -4338,7 +4338,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_BDI_TABLE",
-    cron = "0 31 */1 * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-bdi.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -4487,7 +4487,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_BDI",
-    cron = "0 40 */1 * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-ft-bdi.conf",
     taskType = "BATCH",
       taskQueue = "compute",
@@ -4535,7 +4535,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_BDI_ART",
-    cron = "0 20 */1 * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-it-bdi-art.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -4559,7 +4559,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_BDI_ART",
-    cron = "0 29 */1 * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-ft-bdi-art.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -4583,7 +4583,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_BDI_AMELIORE",
-    cron = "0 50 */1 * * ?",
+    cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-ft-bdi-ameliore.conf",
     taskType = "BATCH",
     taskQueue = "compute",
