--- a/PROD/CONF/EXPORT/MARKETING/load-export-71-revenu-data-par-usage-detail.conf
+++ b/PROD/CONF/EXPORT/MARKETING/load-export-71-revenu-data-par-usage-detail.conf
@@ -65,7 +65,7 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.pre-exec-queries += "/PROD/CONF/EXPORT/MARKETING/load-export-71-revenu-data-par-usage-detail.conf"
+flux.pre-exec-queries += "PROD/SCRIPTS/EXPORT/MARKETING/REVENU_DATA_PAR_USAGE_DETAIL/prequery_export_71_revenu_data_par_usage_detail.hql"
 flux.exec-queries += "/PROD/SCRIPTS/EXPORT/MARKETING/REVENU_DATA_PAR_USAGE_DETAIL/query_export_71_revenu_data_par_usage_detail.hql"
 flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('${hivevar:job_instanceid}', 'OK', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
 
