Modification IT_BDI et FT_BDI

--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -47,6 +47,8 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/prequery_spark_it_bdi.hql"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.tt_gap_bdi_hlr"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_ZSMART_GAP2"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP1"
@@ -59,6 +61,9 @@ flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_1"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE_TMP"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_LIGNE_FLOTTE2"
 
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_gap_bdi_hlr.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_gap_into_tt_zsmart.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_gap_from_zsmart_into_crm_b2c.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/merge_spark_it_bdi_crm_b2c_into_tt_bdi_tmp.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/merge_spark_it_bdi_crm_b2b_into_tt_bdi_tmp.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_remove_no_zsmart_to_bdi_tmp.hql"
@@ -71,9 +76,6 @@ flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/remove_from_tt_bdi_tt_stk_pers
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_ligne_flotte2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_from_tt_bdi2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_1_from_tt_bdi3.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_values_into_tt_bdi_pers_morale_tmp1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_multisim_into_tt_bdi_ligne_flotte2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_ligne_flotte2_multitism_generique.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_flotte.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_pers_morale.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi.hql"
