--- a/PROD/CONF/EXPORT/CBM/load-export-inbox-voice-sms.conf
+++ b/PROD/CONF/EXPORT/CBM/load-export-inbox-voice-sms.conf
@@ -69,7 +69,7 @@ flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('${hive
 
 
 flux.hdfs.output-format = "csv"
-flux.hdfs.output-has-header = "false"
+flux.hdfs.output-has-header = "true"
 flux.hdfs.output-separator = ";"
 flux.hdfs.output-mode = "overwrite"
 flux.hdfs.output-path = "/PROD/EXPORT/EXPORT_INBOX_VOICE_SMS"
