Correction conf file for job LOAD_SPARK_FT_CBM_ARPU_MOU

--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-arpu-mou.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-arpu-mou.conf
@@ -37,5 +37,5 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
-flux.inline.exec-queries += "ALTER TABLE MON.SPARK_FT_CBM_ARPU_MOU DROP PARTITION(TRANSACTION_DATE = '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE MON.SPARK_FT_CBM_ARPU_MOU DROP PARTITION(EVENT_DATE = '###SLICE_VALUE###')"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/CBM_ARPU_MOU/compute_and_insert_into_ft_cbm_arpu_mou.hql"
