Correcting inline-queries for LOAD_SPARK_FT_CBM_ARPU_MOU and LOAD_SPARK_DT_REF_CBM jobs

--- a/PROD/CONF/DIM/DT_REF_CBM/load-dt-ref-cbm.conf
+++ b/PROD/CONF/DIM/DT_REF_CBM/load-dt-ref-cbm.conf
@@ -39,7 +39,7 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
-flux.inline.exec-queries += "TRUNCATE TABLE INSERT INTO DIM.DT_REF_CBM"
+flux.inline.exec-queries += "TRUNCATE TABLE DIM.DT_REF_CBM"
 flux.exec-queries += "/PROD/SCRIPTS/IT/DIM/DT_REF_CBM/insert_into_dt_ref_cbm.hql"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
