--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-orange-money-revenue.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-orange-money-revenue.conf
@@ -1,4 +1,4 @@
-flux.yarn.queue = "compute"
+flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
 
 flux.input-type = "HIVE"
@@ -12,12 +12,12 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_SPARK_KPI_MKT_V3"
+flux.name = "LOAD_SPARK_KPI_MKT_OM"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -72
+flux.slice-begin-value = -139
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
