--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-reg.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-reg.conf
@@ -17,7 +17,7 @@ flux.name = "LOAD_SPARK_KPI_MKT_V2_REG2"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -72
+flux.slice-begin-value = -77
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -46,5 +46,5 @@ flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.pre-exec-queries+="select if(is_ok=0 and source_table>=21,'OK','NOK') from (select count(*) is_ok from tmp.SPARK_KPIS_REG where processing_date='###SLICE_VALUE###' and )a,(select count(distinct source_table) source_table from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where transaction_date='###SLICE_VALUE###')b"
-flux.exec-queries += "/DATALAB/SCRIPTS/compute_and_insert_into_spark_kpis_reg.hql"
+flux.inline.pre-exec-queries+="select if(is_ok=0 and source_table>=21,'OK','NOK') from (select count(*) is_ok from tmp.SPARK_KPIS_REG5 where processing_date='###SLICE_VALUE###'  )a,(select count(distinct source_table) source_table from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where transaction_date='###SLICE_VALUE###')b"
+flux.exec-queries += "/DATALAB/SCRIPTS/compute_and_insert_into_spark_kpis_reg_daily_log.hql"
