--- a/PROD/CONF/BDI/load-spark-it-bdi-art.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-art.conf
@@ -51,17 +51,19 @@ flux.inline.exec-queries +="truncate table TMP.TT_ZSMART_CONFORMITE"
 flux.inline.exec-queries +="truncate table TMP.TT_MYOMID_CONFORMITE"
 flux.inline.exec-queries +="truncate table TMP.TT_IT_BDI_ART1"
 flux.inline.exec-queries +="truncate table TMP.TT_DT_BASE_ID_CONFORMITE"
-//flux.inline.exec-queries +="truncate table TMP.TT_MULTISIMS_FIN"
-//flux.inline.exec-queries +="truncate table TMP.TT_BDI_LIGNE_FLOTTE_art"
-//flux.inline.exec-queries +="truncate table TMP.TT_IT_BDI_ART2"
+flux.inline.exec-queries +="truncate table TMP.TT_ZSMART_CONFORMITE_2"
+flux.inline.exec-queries +="truncate table TMP.TT_DT_BASE_ID_CONFORMITE_2"
+
 
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_zsmart_conformite.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_zsmart_conformite_2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_om_photo_conformite.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_myomid_conformite.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_dt_base_id_conformite.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_dt_base_id_conformite_2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_it_bdi_art1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_spark_it_bdi_art.hql"
