correct bug spark compute cron task

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -4604,7 +4604,7 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
+//crontasks +=
 //  {
 //    instanceId = "LOAD_SPARK_FT_A_BDI_AMELIORE",
 //    cron = "0 13 */1 * * ?",
