Compute AGG.SPARK_FT_A_DATAMART_OM_MARKETING, AGG.SPARK_FT_A_PARC_OM tables. Automate imports MON.SPARK_DATAMART_OM_MARKETING2, MON.SPARK_DATAMART_OM_DISTRIB tables

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -1061,3 +1061,36 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+
+  crontasks +=
+  {
+    instanceId = "SQ_IMPORT_SPARK_DATAMART_OM_MARKETING",
+    cron = "0 55 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-import-spark-datamart-om-marketing.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+  crontasks +=
+  {
+    instanceId = "SQ_IMPORT_SPARK_DATAMART_OM_DISTRIB",
+    cron = "0 55 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-import-spark_datamart_om_distrib.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
